--- a/_posts/2023-01-29-Benign.md
+++ b/_posts/2023-01-29-Benign.md
@@ -5,6 +5,7 @@ date: 2023-01-26 08:08:00 -500
 categories: [TryHackMe]
 tags: [splunk, blue-team]     # TAG names should always be lowercase
 media_subpath: /assets/img/Benign/
+image: BenignFrontImage.png
 ---
 
 Today, we will be exploring TryHackMe's [Benign](https://tryhackme.com/room/benign) room. This challenge is marked as medium difficulty and involves a short investigation using Splunk. The process is fairly straightforward. This write-up has been sanitized per TryHackMe's guidelines on answers, flags, and hashes.
