--- a/_posts/2023-11-25-Update.md
+++ b/_posts/2023-11-25-Update.md
@@ -5,6 +5,7 @@ date: 2023-11-23 09:08:00 -500
 categories: [Career]
 tags: [professional-development, life-update]     # TAG names should always be lowercase
 media_subpath: /assets/img/UpdateNov23/
+image: LifeUpdate2023.png
 ---
 
 # Where have I been?
