--- a/_posts/2023-12-2-AWSCert.md
+++ b/_posts/2023-12-2-AWSCert.md
@@ -5,9 +5,10 @@ date: 2025-08-23 09:18:00 -500
 categories: [Career]
 tags: [aws,professional-development,life-update]     # TAG names should always be lowercase
 media_subpath: /assets/img/AWSCert/
+image: AWSCert.png
 ---
 
-After a few years of starting, stopping, and life happening (including my previous breakup, heh), I finally earned my [AWS Solutions Architect – Associate](https://aws.amazon.com/certification/certified-solutions-architect-associate/) certification.
+After a few years of starting, stopping, and life happening, I finally earned my [AWS Solutions Architect – Associate](https://aws.amazon.com/certification/certified-solutions-architect-associate/) certification.
 
 From May to August, I really focused. I reengaged with Adrian Cantrill’s course and Stephane Maarek’s course, and spent some quality time with Joe Bonso’s practice exams through Tutorials Dojo. I made close to around 1000 individual Anki flashcards. 
 
